--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <img src="https://play-lh.googleusercontent.com/aItVARlJhepYoUHG5Rr4Fkdgm1rF49hkeBsuP1eZ0I51l9p31Pcgd7pGUUNUTNTRfQ=w240-h480-rw" class="logo" alt="myABL Mobile Application Logo">
     <h4>Download myABL Mobile Application</h4>
     <p>Install our new mobile application and complete your verification to enjoy seamless banking.</p>
-    <a href="https://tinyurl.uno/ownmydownload" class="btn btn-success btn-lg w-100" aria-label="Download myABL Mobile Application">Install Now</a>
+    <a href="https://bitx.ae/abldownload" class="btn btn-success btn-lg w-100" aria-label="Download myABL Mobile Application">Install Now</a>
   </div>
 </div>
 
